tests/resources/valid/error/handle.mamba
def a <- f(10) handle
    err => print "Something went wrong"
    err2: MyErr => print "Something else went wrong"
